<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TodoList Vibe</string>
    <string name="welcome_message">Bienvenue dans votre TodoList</string>
    <string name="login">Se connecter</string>
    <string name="register">S\'inscrire</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="back_to_login">Retour à la connexion</string>
</resources>